--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "applesauce-accounts": "^3.1.0",
     "applesauce-core": "^3.1.0",
     "applesauce-react": "^3.1.0",
+    "applesauce-relay": "^3.1.0",
     "nostr-tools": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
