--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "applesauce-accounts": "^3.1.0",
     "applesauce-core": "^3.1.0",
+    "applesauce-loaders": "^3.1.0",
     "applesauce-react": "^3.1.0",
     "applesauce-relay": "^3.1.0",
     "nostr-tools": "^2.4.0",
