chore: ignore applesauce directory in ESLint configuration
- Added 'applesauce' to ignorePatterns in package.json
- Prevents linting errors from dependency code
- Maintains focus on project-specific code quality
- ESLint now runs cleanly with 0 errors and 0 warnings

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     ],
     "ignorePatterns": [
       "dist",
-      ".eslintrc.cjs"
+      ".eslintrc.cjs",
+      "applesauce"
     ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
