--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "applesauce-relay": "^3.1.0",
     "nostr-tools": "^2.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
