--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "applesauce-loaders": "^3.1.0",
     "applesauce-react": "^3.1.0",
     "applesauce-relay": "^3.1.0",
+    "date-fns": "^4.1.0",
     "nostr-tools": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
-    "relative-time": "^2.1.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
