--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markr",
+  "name": "boris",
   "version": "0.1.3",
   "description": "A minimal nostr client for bookmark management",
   "type": "module",
