--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
-    "reading-time": "^1.5.0",
+    "reading-time-estimator": "^1.14.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
