--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.3",
     "reading-time-estimator": "^1.14.0",
     "remark-gfm": "^4.0.1"
   },
