--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "boris",
   "version": "0.2.4",
   "description": "A minimal nostr client for bookmark management",
+  "homepage": "https://xn--bris-v0b.com/",
   "type": "module",
   "scripts": {
     "dev": "vite",
