--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "reading-time-estimator": "^1.14.0",
-    "remark-gfm": "^4.0.1",
-    "url-metadata": "^5.2.2"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
