fix(api): add base tag for proper asset loading
Use named parameter syntax in Vercel rewrite and add <base href="/"> tag to ensure assets load correctly from root when serving index.html through the API.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/a/(.*)",
-      "destination": "/api/article-og?naddr=$1"
+      "source": "/a/:naddr",
+      "destination": "/api/article-og?naddr=:naddr"
     },
     {
       "source": "/(.*)",
