feat(vercel): add rewrite rule for article OG endpoint
Route /a/:naddr requests to /api/article-og for dynamic social preview tags.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/a/:naddr",
+      "destination": "/api/article-og?naddr=:naddr"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
