refactor: move .env to scripts directory and update documentation

--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -1,5 +1,5 @@
 # Nostr configuration for publish-markdown.sh script
-# Copy this file to .env and fill in your values
+# Copy this file to scripts/.env and fill in your values
 
 # Your Nostr secret key (nsec, ncryptsec, or hex format)
 # You can also set this via environment variable: export NOSTR_SECRET_KEY=your_key
