--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "tinyld": "^1.3.4",
-    "use-pull-to-refresh": "^2.4.1"
+    "use-pull-to-refresh": "^2.4.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
