fix(vercel): remove functions.runtime and pin Node 18 via package.json engines

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A minimal nostr client for bookmark management",
   "homepage": "https://read.withboris.com/",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
