feat: implement storage-backed OG previews with Upstash Redis
- Add ogStore service for Redis get/set operations
- Extract shared logic: ogHtml (generateHtml, escapeHtml) and articleMeta (relay/gateway fetching)
- Refactor article-og endpoint to read from Redis, try gateway on miss, trigger background refresh
- Add article-og-refresh endpoint for background relay fetching and caching
- Update vercel.json with refresh function config
- Remove WebSocket dependencies from main OG endpoint for faster crawler responses

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
   "functions": {
     "api/article-og.ts": {
       "maxDuration": 10
+    },
+    "api/article-og-refresh.ts": {
+      "maxDuration": 10
     }
   },
   "rewrites": [
