--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -103,6 +104,19 @@
       "@typescript-eslint/no-explicit-any": "warn",
       "prefer-const": "error",
       "no-var": "error"
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "api/**/*.ts",
+          "src/services/ogStore.ts",
+          "src/services/articleMeta.ts"
+        ],
+        "env": {
+          "node": true,
+          "browser": false
+        }
+      }
+    ]
   }
 }
