fix: move OG service files to api/services for Vercel compatibility
- Move ogStore, ogHtml, and articleMeta from src/services/ to api/services/
- Update imports in article-og.ts and article-og-refresh.ts
- Update import paths in articleMeta.ts (lib/profile and src/config/relays)
- Remove old files from src/services/
- Clean up ESLint config to only reference api/**/*.ts

This fixes the ERR_MODULE_NOT_FOUND error on Vercel by ensuring
serverless functions can access the service modules.

--- a/package.json
+++ b/package.json
@@ -107,11 +107,7 @@
     },
     "overrides": [
       {
-        "files": [
-          "api/**/*.ts",
-          "src/services/ogStore.ts",
-          "src/services/articleMeta.ts"
-        ],
+        "files": ["api/**/*.ts"],
         "env": {
           "node": true,
           "browser": false
