fix: gate /a/:naddr rewrite to crawlers to prevent refresh redirect
- Add conditional rewrite rules in vercel.json to only serve OG HTML to crawlers
- Add ?og=1 query parameter override for manual testing
- Document ?og=1 testing path in README
- Fixes regression where browser refresh on /a/:naddr redirected to root

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,21 @@
   "rewrites": [
     {
       "source": "/a/:naddr",
-      "destination": "/api/article-og?naddr=:naddr"
+      "destination": "/api/article-og?naddr=:naddr",
+      "has": [
+        { "type": "query", "key": "og", "value": "1" }
+      ]
+    },
+    {
+      "source": "/a/:naddr",
+      "destination": "/api/article-og?naddr=:naddr",
+      "has": [
+        {
+          "type": "header",
+          "key": "user-agent",
+          "value": ".*(bot|Bot|BOT|crawler|Crawler|CRAWLER|spider|Spider|facebookexternalhit|Slackbot|Twitterbot|LinkedInBot|WhatsApp|TelegramBot|Discordbot|Googlebot|bingbot|YandexBot|Baiduspider).*"
+        }
+      ]
     },
     {
       "source": "/(.*)",
